add -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap to entrypoint for jvm so java sees cgroup memory and cpu limits